--- a/src/main/resources/assets/lib/css/sb-admin.css
+++ b/src/main/resources/assets/lib/css/sb-admin.css
@@ -18,11 +18,15 @@ body {
 }
 
 #wrapper {
+    position: absolute;
     padding-left: 0;
+    height: 100%;
 }
 
 #page-wrapper {
+
     width: 100%;
+    height: 100%;
     padding: 0;
     background-color: #fff;
 }
@@ -34,11 +38,12 @@ body {
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 225px;
+        padding-left:125px;
     }
 
     #page-wrapper {
         padding: 10px;
+        margin-bottom: 0;
     }
 }
 
@@ -116,9 +121,9 @@ ul.alert-dropdown {
     .side-nav {
         position: fixed;
         top: 51px;
-        left: 225px;
-        width: 225px;
-        margin-left: -225px;
+        left: 125px;
+        width: 125px;
+        margin-left: -125px;
         border: none;
         border-radius: 0;
         overflow-y: auto;
@@ -129,7 +134,7 @@ ul.alert-dropdown {
     }
 
     .side-nav>li>a {
-        width: 225px;
+        width: 125px;
     }
 
     .side-nav li a:hover,
